getting-started-with-docker-and-kubernetes/08-ingress/ingress-rewrite-target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/echo-hostname(/|$)(.*)"
        backend:
          service:
            name: hostname-service
            port: 
              number: 80
